# ckanext-ytp-comments

./: .ahoy.yml  .env  .flake8  .gitignore  MANIFEST.in  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.circleci/: config.yml
.docker/: Dockerfile-py2.ckan  Dockerfile-py3.ckan  Dockerfile-template.ckan  Dockerfile.ckan  test.ini
.docker/scripts/: create-test-data.sh  init-ext.sh  init.sh
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
ckanext/ytp/comments/: bad_words.txt  command.py  controller.py  email_notifications.py  helpers.py  listeners.py  model.py  notification_controller.py  notification_helpers.py  notification_models.py  plugin.py  request_helpers.py  signals.py  util.py
ckanext/ytp/comments/cli/: click_cli.py  command.py  paster_cli.py
ckanext/ytp/comments/controller/: pylons_controller.py
ckanext/ytp/comments/controllers/: __init__.py  blueprints.py  pylons_controllers.py
ckanext/ytp/comments/logic/action/: __init__.py  create.py  delete.py  get.py  update.py
ckanext/ytp/comments/logic/auth/: delete.py  update.py
ckanext/ytp/comments/plugin/: __init__.py  flask_plugin.py  pylons_plugin.py
ckanext/ytp/comments/plugin_mixins/: flask_plugin.py  pylons_plugin.py
ckanext/ytp/comments/public/javascript/: comment_notifications.js  comment_validation.js  comments.css  comments.js  confirm_mute_content_item.js  flag-comment.js  follow_mute_item_comments.js  follow_mute_thread.js  follow_or_mute_notifications.js  webassets.yml
ckanext/ytp/comments/templates/admin/: config.html
ckanext/ytp/comments/templates/email/: notification-new-comment.txt
ckanext/ytp/comments/templates/emails/bodies/: notification-flagged-comment.txt  notification-new-comment.txt
ckanext/ytp/comments/templates/package/: comment_list.html  comments.html  read.html  read_base.html
ckanext/ytp/comments/templates/package/snippets/: flag-comment_asset.html  flag-comment_resource.html  follow-or-mute-comment_asset.html
ckanext/ytp/comments/templates/snippets/: comment_deleted.html  comment_thread_notification_actions.html  comments-js_asset.html  comments-js_resource.html  content_item_notification_actions.html
ckanext/ytp/comments/tests/: conftest.py  test_index_comments.py
test/features/: comments.feature  environment.py
test/features/steps/: steps.py
